--- a/css/_800.scss
+++ b/css/_800.scss
@@ -62,7 +62,7 @@ header {
 */
 
 .cover {
-	width: 30%;
+	width: 100%;
 	.blurb {
 		h3 {
 			@include font(1);
@@ -71,14 +71,16 @@ header {
 }	
 
 .quote {
-	height: 347.4px;
+	width: 100%;
+	// height: 347.4px;
 	p {
 		@include font(1.2);
 	}
 }
 
 .authors {
-	height: 347.4px;
+	width: 100%;
+	// height: 347.4px;
 	img {
 		width: 100px;
 	}
