fixed media query at 800px

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -18,3 +18,9 @@ $blue4: #00ACC1;
 $blue5: #0097A7;
 $blue6: #00838F;
 $orange: #F94A06;
+
+$go-dkblue: #0e122d;
+$go-navy: #182044;
+$go-medblue: #51628e;
+$go-ltblue: #91a1ba;
+$go-green: #afd0c9;
