--- a/css/_800.scss
+++ b/css/_800.scss
@@ -22,7 +22,7 @@ header {
 		text-align: center;
 	}
 	button {
-		background-color: $orange;
+		background-color: $go-green;
 		border: none;
 		border-radius: 5px;
 		padding: 5px 5px;
@@ -80,12 +80,27 @@ header {
 
 .authors {
 	width: 100%;
-	// height: 347.4px;
-	img {
-		width: 100px;
+	padding: 1.5em .5em .5em 2em;
+	h2 {
+		text-align: left;
+		margin: 0 0 0 .5em;
 	}
-	p {
+	img {
+		width: 130px;
+		margin: 1em 0 0 1em;
+
+	}
+	.author-pic {
+		float: left;
+		text-align: center;
+		margin-bottom: .5em;
+	}
+	.interview {
 		@include font(1);
+		width: 65%;
+		display: inline;
+		float: left;
+		margin-left: 3em;
 	}
 }
 
