--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ img {
 .horiz-line {
   width: 100%;
   margin: 0 auto;
-  border: 1px solid #00838F; }
+  border: 1px solid #0e122d; }
 
 .clear-fix {
   clear: both; }
@@ -136,7 +136,7 @@ p {
   ========================================
 */
 header {
-  background-color: #FAFAFA;
+  background-color: #F2F2F2;
   padding: .5em .5em 0 .5em; }
 
 .desktop-nav {
@@ -161,12 +161,12 @@ header {
   .mobile-nav h1 {
     text-align: center; }
   .mobile-nav button {
-    background-color: #F94A06;
+    background-color: #afd0c9;
     border: none;
     border-radius: 5px;
     padding: 5px 5px;
     text-align: right;
-    color: #FAFAFA; }
+    color: #383838; }
     .mobile-nav button:hover {
       cursor: pointer; }
 
@@ -178,7 +178,7 @@ header {
 .intro {
   padding: 2.5em;
   text-align: center;
-  background-color: #0097A7;
+  background-color: #51628e;
   margin: 0 auto;
   color: #F2F2F2; }
   .intro p {
@@ -186,7 +186,8 @@ header {
     margin: 0 auto;
     line-height: 1.3em;
     font-size: 19.2px;
-    font-size: 1.2em; }
+    font-size: 1.2em;
+    color: #0e122d; }
   .intro a {
     color: #FAFAFA; }
     .intro a:hover {
@@ -248,12 +249,15 @@ header {
       width: 50px;
       position: relative;
       margin-top: -20px; }
+    .cover .blurb p {
+      color: #91a1ba;
+      margin-top: -10px; }
     .cover .blurb .more {
       width: 20px;
       float: right; }
 
 .quote {
-  background-color: #00838F; }
+  background-color: #afd0c9; }
   .quote img {
     width: 90px;
     position: absolute;
@@ -282,7 +286,7 @@ header {
       font-size: 1em; }
 
 .authors {
-  background-color: #80DEEA; }
+  background-color: #afd0c9; }
   .authors h2, .authors h4 {
     margin: 1em 0 0 .5em;
     text-align: center; }
@@ -294,7 +298,8 @@ header {
     margin: 1.5em 1em 1em 1em; }
   .authors .more {
     width: 20px;
-    float: right; }
+    float: right;
+    margin-right: .5em; }
     .authors .more:hover {
       cursor: pointer; }
 
@@ -308,15 +313,16 @@ footer {
   background-color: #383838;
   padding: .5em 2em 2em 2em; }
   footer p {
-    color: #FAFAFA;
+    color: #91a1ba;
     margin: 1.7em auto .5em auto; }
   footer .email {
     width: 100%;
-    margin: 0 auto 1em auto; }
+    margin: 0 auto 1em auto;
+    max-width: 600px; }
   footer .submit {
     margin: 0 auto 1em auto; }
   footer a, footer h5 {
-    color: #80DEEA;
+    color: #91a1ba;
     line-height: 1.3em; }
 
 @media screen and (min-width: 600px) {
@@ -361,7 +367,7 @@ footer {
     .desktop-nav h1 {
       text-align: center; }
     .desktop-nav button {
-      background-color: #F94A06;
+      background-color: #afd0c9;
       border: none;
       border-radius: 5px;
       padding: 5px 5px;
@@ -405,12 +411,25 @@ footer {
       font-size: 1.2em; }
 
   .authors {
-    width: 100%; }
+    width: 100%;
+    padding: 1.5em .5em .5em 2em; }
+    .authors h2 {
+      text-align: left;
+      margin: 0 0 0 .5em; }
     .authors img {
-      width: 100px; }
-    .authors p {
+      width: 130px;
+      margin: 1em 0 0 1em; }
+    .authors .author-pic {
+      float: left;
+      text-align: center;
+      margin-bottom: .5em; }
+    .authors .interview {
       font-size: 16px;
-      font-size: 1em; } }
+      font-size: 1em;
+      width: 65%;
+      display: inline;
+      float: left;
+      margin-left: 3em; } }
 @media screen and (min-width: 1000px) {
   .horiz-line-mobile {
     display: none; }
