--- a/css/style.scss
+++ b/css/style.scss
@@ -205,6 +205,10 @@ header {
   Stories
   ========================================
 */
+.cover-desk {
+	visibility: hidden;
+	position: absolute;
+}
 
 .stories {
 	width: 100%;
