--- a/css/_1000.scss
+++ b/css/_1000.scss
@@ -60,6 +60,63 @@ header {
 	}
 }
 
+/*
+  ========================================
+  Stories
+  ========================================
+*/
+.cover-tab {
+	display: none;
+}
+
+.cover-desk {
+	visibility: visible;
+	position: relative;
+}
+
+.cover {
+	width: 23%;
+	.blurb {
+		h3 {
+			@include font(1);
+		}
+	}
+}	
+
+.quote {
+	width: 48%;
+	// height: 347.4px;
+	p {
+		@include font(1.2);
+	}
+}
+
+.authors {
+	width: 48%;
+	padding: 1.5em .5em .5em 2em;
+	h2 {
+		text-align: left;
+		margin: 0 0 1em .5em;
+	}
+	img {
+		width: 100px;
+		margin: 1em 0 0 1em;
+
+	}
+	.author-pic {
+		float: left;
+		text-align: center;
+		margin-bottom: .5em;
+	}
+	.interview {
+		@include font(1);
+		width: 65%;
+		display: inline;
+		float: left;
+		margin-left: 1em;
+	}
+}
+
 
 
 }
