--- a/css/style.scss
+++ b/css/style.scss
@@ -319,6 +319,13 @@ header {
 	}
 }
 
+.modal-backdrop {
+	display: none;
+}
+.modal {
+	display: none;
+}
+
 /*
   ========================================
   Footer
