added link to h1

--- a/css/_800.scss
+++ b/css/_800.scss
@@ -20,6 +20,9 @@ header {
 	display: block;
 	h1 {
 		text-align: center;
+		a {
+			color: $black;
+		}
 	}
 	button {
 		background-color: $go-green;
