--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,15 @@ header {
 */
 .story-container {
   width: 70%;
-  margin: 2em auto; }
+  max-width: 650px;
+  margin: 4em auto 2em auto; }
+  .story-container h3 {
+    text-align: center;
+    line-height: 2em; }
+  .story-container h4 {
+    text-align: center;
+    line-height: 1em;
+    margin-bottom: 2em; }
   .story-container p {
     line-height: 1.5em; }
   .story-container span {
