--- a/css/style.scss
+++ b/css/style.scss
@@ -337,7 +337,17 @@ header {
 
 .story-container {
 	width: 70%;
-	margin: 2em auto;
+	max-width: 650px;
+	margin: 4em auto 2em auto;
+	h3 {
+		text-align: center;
+		line-height: 2em;
+	}
+	h4 {
+		text-align: center;
+		line-height: 1em;
+		margin-bottom: 2em;
+	}
 	p {
 		line-height: 1.5em;
 	}
