--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@ img {
 
 .horiz-line {
   width: 100%;
-  margin: 0 auto;
-  border: 1px solid #0e122d; }
+  margin: 2em auto;
+  border: 1px solid #51628e; }
 
 .clear-fix {
   clear: both; }
@@ -323,12 +323,16 @@ header {
   ========================================
 */
 .story-container {
-  width: 70%;
+  width: 80%;
   max-width: 650px;
-  margin: 4em auto 2em auto; }
+  margin: 2em auto 2em auto; }
+  .story-container .buffy-banner {
+    max-width: 100%;
+    text-align: center; }
   .story-container h3 {
     text-align: center;
-    line-height: 2em; }
+    line-height: 2em;
+    margin-top: 1em; }
   .story-container h4 {
     text-align: center;
     line-height: 1em;
@@ -337,6 +341,8 @@ header {
     line-height: 1.5em; }
   .story-container span {
     font-family: "freight-sans-pro",sans-serif; }
+  .story-container a {
+    text-decoration: underline; }
 
 /*
   ========================================
