--- a/css/style.scss
+++ b/css/style.scss
@@ -27,8 +27,8 @@ img {
 
 .horiz-line {
 	width: 100%;
-	margin: 0 auto;
-	border: 1px solid $go-dkblue;
+	margin: 2em auto;
+	border: 1px solid $go-medblue;
 }
 
 .clear-fix {
@@ -336,12 +336,17 @@ header {
 */
 
 .story-container {
-	width: 70%;
+	width: 80%;
 	max-width: 650px;
-	margin: 4em auto 2em auto;
+	margin: 2em auto 2em auto;
+	.buffy-banner {
+		max-width: 100%;
+		text-align: center;
+	}
 	h3 {
 		text-align: center;
 		line-height: 2em;
+		margin-top: 1em;
 	}
 	h4 {
 		text-align: center;
@@ -353,6 +358,9 @@ header {
 	}
 	span {
 		font-family: "freight-sans-pro",sans-serif;
+	}
+	a {
+		text-decoration: underline;
 	}
 }
 
