--- a/css/_800.scss
+++ b/css/_800.scss
@@ -18,6 +18,7 @@ header {
 
 .desktop-nav {
 	display: block;
+	margin-bottom: 1.5em;
 	h1 {
 		text-align: center;
 		a {
@@ -68,7 +69,7 @@ header {
 	// width: 100%;
 	.blurb {
 		h3 {
-			@include font(1);
+			// @include font(1);
 		}
 	}
 }	
@@ -110,23 +111,50 @@ header {
 .hide-img {
 	display: none;
 }
+
+/*
+  ========================================
+  Modal
+  ========================================
+*/
+
 .modal-backdrop {
-	width: 100%;
 	display: none;
 }
 .modal {
 	display: block;
-	background: rgba(0, 0, 0, .5);
+	background: rgba(255, 255, 255, .9);
 	box-shadow: 0 3px 3px #aeaeae;
 	position: absolute;
 	z-index: 999;
-	top: 21em;
+	top: 8.2em;
 	left: 30%;
-
-	img {
-		max-width: 600px;
+	padding: 2em 7em;
+	h3 {
+		font-style: normal;
+		line-height: 2em;
+		width: 350px;
+		text-align: left;
+	}
+	h3:first-letter {
+		@include font(5);
+		float: left;
+		margin-top: .2em;
+		margin-right: .07em;
+	}
+	a {
+		color: $go-ltblue;
+		font-style: italic;
+		text-align: right;
+		@include font(1);
 	}
 }
+.hide-modal {
+	position: absolute;
+	top: 1em;
+	right: 1.2em;
+}
+
 
 
 
