--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,9 @@ h2 {
 h3 {
   line-height: 1em;
   font-family: "freight-sans-pro",sans-serif;
-  font-size: 32px;
-  font-size: 2em;
-  font-weight: bold;
-  text-transform: uppercase; }
+  font-size: 16px;
+  font-size: 1em;
+  font-weight: bold; }
 
 h4 {
   font-size: 16px;
@@ -105,8 +104,8 @@ h5 {
 h6 {
   color: #383838;
   line-height: .5em;
-  font-size: 80px;
-  font-size: 5em; }
+  font-size: 32px;
+  font-size: 2em; }
 
 li {
   font-size: 16px;
@@ -257,19 +256,12 @@ header {
       color: #91a1ba;
       margin: -10px auto 0 auto;
       width: 30px; }
-    .cover .blurb h5 {
-      font-size: 27.2px;
-      font-size: 1.7em;
-      font-weight: bold;
-      line-height: 1em;
-      color: rgba(145, 161, 186, 0.5); }
     .cover .blurb h3 {
-      text-align: left;
-      margin-left: .8em;
-      height: 90px; }
+      text-transform: uppercase; }
     .cover .blurb .more {
       width: 20px;
-      float: right; }
+      float: right;
+      margin-right: 1em; }
 
 .quote {
   background-color: #afd0c9; }
@@ -393,11 +385,8 @@ footer {
   .cover {
     width: 48%; }
     .cover .blurb h3 {
-      font-size: 32px;
-      font-size: 2em; }
-    .cover .blurb h5 {
-      font-size: 19.2px;
-      font-size: 1.2em; }
+      font-size: 20px;
+      font-size: 1.25em; }
     .cover .blurb .more {
       width: 20px;
       float: right; }
