added social icons and box shadow to story page

--- a/css/_1000.scss
+++ b/css/_1000.scss
@@ -129,6 +129,27 @@ header {
 	}
 }
 
+/*
+  ========================================
+  Story page
+  ========================================
+*/
+
+.sticky-socials {
+	display: block;
+	img {
+		width: 40px;
+		position: absolute;
+		top: 9em;
+		left: 1em;
+		position: fixed;
+		}
+}
+
+.sticky-socials-horiz {
+	display: none;
+}
+
 
 
 }
