--- a/css/style.css
+++ b/css/style.css
@@ -255,13 +255,17 @@ header {
     .cover .blurb p {
       color: #91a1ba;
       margin: -10px auto 0 auto;
-      width: 30px; }
+      width: 55px; }
     .cover .blurb h3 {
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      font-size: 30.4px;
+      font-size: 1.9em; }
+    .cover .blurb .modal-blurb {
+      text-transform: none;
+      font-weight: normal; }
     .cover .blurb .more {
       width: 20px;
-      float: right;
-      margin-right: 1em; }
+      float: right; }
 
 .quote {
   background-color: #afd0c9; }
@@ -329,9 +333,11 @@ header {
   ========================================
 */
 .story-container {
-  width: 80%;
-  max-width: 650px;
-  margin: 2em auto 2em auto; }
+  width: 90%;
+  max-width: 680px;
+  margin: 2em auto 2em auto;
+  padding: 1.5em;
+  box-shadow: 0 3px 3px #888888; }
   .story-container .buffy-banner {
     max-width: 100%;
     text-align: center; }
@@ -349,6 +355,14 @@ header {
     font-family: "freight-sans-pro",sans-serif; }
   .story-container a {
     text-decoration: underline; }
+
+.sticky-socials {
+  display: none; }
+
+.sticky-socials-horiz {
+  margin: 1em auto -.5em auto;
+  width: 50%;
+  max-width: 150px; }
 
 /*
   ========================================
@@ -385,8 +399,8 @@ footer {
   .cover {
     width: 48%; }
     .cover .blurb h3 {
-      font-size: 20px;
-      font-size: 1.25em; }
+      font-size: 20.8px;
+      font-size: 1.3em; }
     .cover .blurb .more {
       width: 20px;
       float: right; }
@@ -615,6 +629,23 @@ footer {
       display: inline;
       float: left;
       margin: 2em 0 1em 1.2em;
-      vertical-align: middle; } }
+      vertical-align: middle; }
+
+  /*
+    ========================================
+    Story page
+    ========================================
+  */
+  .sticky-socials {
+    display: block; }
+    .sticky-socials img {
+      width: 40px;
+      position: absolute;
+      top: 9em;
+      left: 1em;
+      position: fixed; }
+
+  .sticky-socials-horiz {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
