changed card titles for mobile only, tablet and desktop next

--- a/css/_800.scss
+++ b/css/_800.scss
@@ -59,6 +59,12 @@ header {
 	}
 }
 
+.info {
+	top: .49em;
+	right: 5.5em;
+	width: 20px;
+}
+
 /*
   ========================================
   Stories
