--- a/css/_1000.scss
+++ b/css/_1000.scss
@@ -87,7 +87,7 @@ header {
 	.cover-img {
 	}
 	h5 {
-		@include font(1.8);
+		@include font(1.9);
 		max-width: 250px;
 	}
 }	
@@ -110,23 +110,17 @@ header {
 
 .authors {
 	width: 48%;
-	padding: .5em .5em .5em .5em;
 	h2 {
 		text-align: left;
-		margin: 0 0 .5em .5em;
-		@include font(2.5);
-		color: $go-ltblue;
+		margin: 0;
+		@include font(3);
 	}
 	img {
 		width: 150px;
 		margin: 1em 0 0 1em;
-
 	}
 	.author-pic {
-		float: left;
-		text-align: center;
-		vertical-align: middle;
-		margin: 2em 0 .5em 0;
+		margin: 3em 0 .5em 1em;
 	}
 	.interview {
 		@include font(1);
@@ -157,6 +151,34 @@ header {
 
 .sticky-socials-horiz {
 	display: none;
+}
+
+.reading-progress {
+	display: block;
+	text-align: center;
+	position: absolute;
+	top: 9em;
+	right: 1.5em;
+	position: fixed;
+	height: 70px;
+	width: 14%;
+	border-top: 1px solid $black;
+	border-bottom: 1px solid $black;
+	h5 {
+		position: absolute;
+		z-index: 1000;
+		margin-left: 1.8em;
+	}
+	.progress-bar {
+		position: absolute;
+		top: 9em;
+		right: 9.6em;
+		position: fixed;
+		width: 5%;
+		height: 70px;
+		background-color: rgba(175, 208, 201, .5);
+		z-index: 0;
+	}
 }
 
 
