--- a/css/_600.scss
+++ b/css/_600.scss
@@ -16,7 +16,7 @@
 	width: 48%;
 	.blurb {
 		h3 {
-			@include font(1.3);
+			@include font(1.5);
 		}
 		.more {
 			width: 20px;
@@ -40,7 +40,9 @@
 
 .authors {
 	width: 100%;
-	// height: 382px;
+	h2 {
+		@include font(3);
+	}
 }
 
 
