--- a/css/_800.scss
+++ b/css/_800.scss
@@ -77,7 +77,7 @@ header {
 	// width: 100%;
 	.blurb {
 		h3 {
-			// @include font(1);
+			// @include font(2);
 		}
 	}
 }
@@ -101,20 +101,17 @@ header {
 
 .authors {
 	width: 100%;
-	padding: 1.5em .5em .5em 2em;
 	h2 {
 		text-align: left;
-		margin: 0 0 0 .5em;
 	}
 	img {
 		width: 130px;
 		margin: 1em 0 0 1em;
-
 	}
 	.author-pic {
 		float: left;
 		text-align: center;
-		margin-bottom: .5em;
+		margin: .5em 0 .5em 2em;
 	}
 	.interview {
 		@include font(1);
@@ -158,6 +155,9 @@ header {
 		float: left;
 		margin-top: .2em;
 		margin-right: .07em;
+		font-family: "freight-sans-pro",sans-serif;
+		font-style: normal;
+		font-weight: bold;
 	}
 	a {
 		color: $go-ltblue;
