--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,6 @@ h3 {
 h4 {
 	@include font(1);
 	color: $black;
-	line-height: 0;
 }
 
 h5 {
@@ -112,6 +111,10 @@ p {
 header {
 	background-color: $grey;
 	padding: .5em .5em 0 .5em;
+}
+
+.logo {
+	width: 200px;
 }
 
 .desktop-nav {
@@ -168,7 +171,7 @@ header {
 .intro {
 	padding: 2.5em;
 	text-align: center;
-	background-color: $go-medblue;
+	background-color: $blue6;
 	margin: 0 auto;
 	color: $grey;
 	p {
@@ -302,7 +305,6 @@ header {
 	}
 	p {
 		width: 80%;
-		text-align: center;
 		margin: 3em auto 1em auto;
 		@include font(1.3);
 		line-height: 1.3em;
@@ -326,14 +328,26 @@ header {
 
 .authors {
 	background-color: $go-green;
-	h2, h4 {
-		margin: 1em 0 0 .5em;
+	padding: .5em;
+	h2 {
 		text-align: center;
+		font-family: "freight-sans-pro",sans-serif;
+		@include font(2.5);
+		text-transform: uppercase;
+		color: $go-ltblue;
+		font-weight: bold;
+		line-height: .6em;
 	}
-	img {
-		width: 120px;
-		display: block;
-		margin: 1em auto;
+	.author-pic {
+		img {
+			width: 120px;
+			display: block;
+			margin: 1em auto;
+		}
+		h4 {
+			text-align: center;
+			@include font(1.5);
+		}
 	}
 	p {
 		margin: 1.5em 1em 1em 1em;
@@ -408,6 +422,10 @@ header {
 	margin: 1em auto -.5em auto;
 	width: 50%;
 	max-width: 150px;
+}
+
+.reading-progress {
+	display: none;
 }
 
 /*
