--- a/css/_800.scss
+++ b/css/_800.scss
@@ -18,7 +18,13 @@ header {
 
 .desktop-nav {
 	display: block;
+	padding: .5em .5em 0 .5em;
 	margin-bottom: 1.5em;
+	margin-top: -.5em;
+	width: 100%;
+	position: fixed;
+	background-color: $grey;
+	z-index: 10000;
 	h1 {
 		text-align: center;
 		a {
@@ -65,6 +71,8 @@ header {
 	top: .49em;
 	right: 5.5em;
 	width: 20px;
+	z-index: 999999;
+	position: fixed;
 }
 
 /*
@@ -72,6 +80,10 @@ header {
   Stories
   ========================================
 */
+
+.stories {
+	padding-top: 6em;
+}
 
 .cover {
 	// width: 100%;
@@ -144,7 +156,7 @@ header {
 	top: 8.2em;
 	left: 30%;
 	padding: 2em 7em;
-	h3 {
+	.modal-blurb {
 		font-style: normal;
 		line-height: 2em;
 		width: 350px;
@@ -171,6 +183,26 @@ header {
 	top: 1em;
 	right: 1.2em;
 }
+
+/*
+  ========================================
+  Story page
+  ========================================
+*/
+
+.story-container {
+	width: 90%;
+	max-width: 680px;
+	margin: 4em auto 2em auto;
+	padding: 1.5em;
+	box-shadow: 0 3px 3px #888888;
+	.buffy-banner {
+		max-width: 100%;
+		text-align: center;
+	}
+}
+
+
 
 
 
