--- a/css/style.scss
+++ b/css/style.scss
@@ -114,7 +114,7 @@ header {
 }
 
 .logo {
-	width: 200px;
+	display: none;
 }
 
 .desktop-nav {
@@ -256,10 +256,18 @@ header {
 			margin: -10px auto 0 auto;
 			width: 55px;
 		}
-		h3 {
-			// text-transform: uppercase;
+		.story-title {
 			@include font(1.9);
 			font-weight: normal;
+			font-style: italic;
+		}
+		.year {
+			line-height: 1em;
+			@include font(1.5);
+			width: 100px;
+			margin: 0 auto;
+			font-weight: bold;
+			color: rgba(145, 161, 186, .5);
 		}
 		.modal-blurb {
 			text-transform: none;
@@ -269,6 +277,7 @@ header {
 			width: 25px;
 			float: right;
 			margin-right: .5em;
+			margin-top: -1em;
 		}
 	}
 }
