--- a/css/_800.scss
+++ b/css/_800.scss
@@ -140,7 +140,7 @@ header {
 
 /*
   ========================================
-  Modal
+  Modals
   ========================================
 */
 
@@ -183,6 +183,26 @@ header {
 	top: 1em;
 	right: 1.2em;
 }
+
+// ----------------------
+// ----------------------
+// .info-backdrop {
+// 	display: none;
+// }
+// .info-modal {
+// 	position: absolute;
+// 	width: 400px;
+// 	z-index: 9999999;
+// 	right: 1.5em;
+// 	top: 3.2em;
+// 	background-color: $white;
+// 	padding: 2em;
+// 	.hide-info {
+// 		float: right;
+// 		margin-top: -1em;
+// 		margin-right: -1em;
+// 	}
+// }
 
 /*
   ========================================
